--- a/css/style.css
+++ b/css/style.css
@@ -22,12 +22,12 @@ header {
 
 .form-group {
     border: none;
-    border-radius: 5px;
-    -webkit-border-radius: 5px;
-    -moz-border-radius: 5px;
-    -ms-border-radius: 5px;
-    -o-border-radius: 5px;
-    background-color: aqua;
+    border-radius: 10px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
+    background-color: rgb(0, 200, 255);
 }
 
 .form-gender {
@@ -37,4 +37,51 @@ header {
 
 .form-input {
     padding: 5px;
+}
+
+.feature-item {
+    text-align: left;
+}
+
+.feature-item>div>p {
+    text-align: justify;
+}
+
+.container-result {
+    padding-top: 5px;
+    padding-bottom: 20px;
+    background-color: rgb(0, 200, 255);
+    text-align: center;
+    border-radius: 10px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
+}
+
+.note-result {
+    text-align: left;
+}
+
+.note-result>div {
+    text-align: center;
+}
+
+button {
+    height: 32px;
+    padding-left: 24px;
+    padding-right: 24px;
+    border: none;
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
+    background-color: rgb(0, 90, 255);
+    color: white;
+}
+
+#reset-botton {
+    background-color: grey;
+    color: white;
 }
